--- a/backend/package.json
+++ b/backend/package.json
@@ -46,6 +46,7 @@
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0",
     "form-data": "^4.0.0",
+    "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
     "mailgun.js": "^8.0.1",
     "method-override": "^3.0.0",
