--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,12 +1,14 @@
 {
   "scripts": {
-    "dev": "expo start --no-https",
-    "dev:staging": "_ENVIRONMENT=staging expo start --no-https",
-    "dev:prod": "_ENVIRONMENT=prod expo start --no-https",
-    "build:prod:ios": "_ENVIRONMENT=prod _PLATFORM=ios expo build:ios -t archive --release-channel prod",
-    "build:staging:ios": "_ENVIRONMENT=staging _PLATFORM=ios expo build:ios -t archive --release-channel staging",
-    "build:prod:android": "_ENVIRONMENT=prod _PLATFORM=android expo build:android -t app-bundle --release-channel prod",
-    "build:staging:android": "_ENVIRONMENT=staging _PLATFORM=android expo build:android -t app-bundle --release-channel staging",
+    "dev": "_DEV_ENVIRONMENT=local expo start --no-https",
+    "dev:staging": "_DEV_ENVIRONMENT=staging expo start --no-https",
+    "dev:prod": "_DEV_ENVIRONMENT=prod expo start --no-https",
+    "build:prod": "eas build --profile prod",
+    "build:staging": "eas build --profile staging",
+    "build:prod:ios": "eas build --profile prod --platform ios",
+    "build:staging:ios": "eas build --profile staging --platform ios",
+    "build:prod:android": "eas build --profile prod --platform android",
+    "build:staging:android": "eas build --profile staging --platform android",
     "test": "jest"
   },
   "jest": {
@@ -20,8 +22,8 @@
       "!**/coverage/**",
       "!**/node_modules/**",
       "!**/babel.config.js",
-      "!**/jest.setup.js", 
-      "!**/app.config.js", 
+      "!**/jest.setup.js",
+      "!**/app.config.js",
       "!**/index.js",
       "!**/metro.config.js"
     ],
@@ -51,6 +53,7 @@
     "expo": "^45.0.0",
     "expo-application": "~4.1.0",
     "expo-constants": "~13.1.1",
+    "expo-dev-client": "~1.0.1",
     "expo-device": "~4.2.0",
     "expo-linear-gradient": "~11.3.0",
     "expo-linking": "~3.1.0",
@@ -112,6 +115,7 @@
     "@types/react-router-dom": "^5.1.8",
     "@types/uuid": "^8.3.1",
     "babel-plugin-module-resolver": "^4.1.0",
+    "eas-cli": "^2.4.1",
     "expo-cli": "^5.0.3",
     "react-test-renderer": "17",
     "typescript": "~4.3.5"
