--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
     "build:staging:android": "eas build --profile staging --platform android",
     "build:dev:android": "eas build --profile dev --platform android",
     "update:staging": "_UPDATE_ENVIRONMENT=staging eas update --branch staging",
+    "update:prod": "_UPDATE_ENVIRONMENT=prod eas update --branch prod",
     "update:staging:ci": "_UPDATE_ENVIRONMENT=staging eas update --branch $_ENVIRONMENT --non-interactive --message $COMMIT_SHA",
+    "update:prod:ci": "_UPDATE_ENVIRONMENT=prod eas update --branch $_ENVIRONMENT --non-interactive --message $_RELEASE_ID",
     "doctor": "_DEV_ENVIRONMENT=staging expo doctor",
     "test": "jest"
   },
