--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,6 +54,7 @@
     "@expo/prebuild-config": "^4.0.0",
     "@googlemaps/google-maps-services-js": "3.1.16",
     "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-community/netinfo": "8.2.0",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
     "@sentry/react-native": "^3.1.1",
