--- a/frontend/package.json
+++ b/frontend/package.json
@@ -75,6 +75,7 @@
     "expo-location": "~14.2.2",
     "expo-modules-autolinking": "~0.8.1 || ~0.9.0",
     "expo-notifications": "~0.15.4",
+    "expo-screen-orientation": "~4.2.0",
     "expo-secure-store": "~11.2.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
