--- a/frontend/package.json
+++ b/frontend/package.json
@@ -83,8 +83,8 @@
     "expo-updates": "~0.15.6",
     "inversify": "^5.1.1",
     "inversify-react": "^1.0.0",
-    "jest": "28.1.3",
-    "jest-expo": "^47.0.0",
+    "jest": "^26.6.3",
+    "jest-expo": "^47.0.1",
     "lodash": "^4.17.21",
     "mobx": "^6.3.2",
     "mobx-persist-store": "^1.0.3",
@@ -123,8 +123,8 @@
     "@babel/core": "^7.19.3",
     "@babel/runtime": "^7.18.9",
     "@expo/ngrok": "^2.5.0",
-    "@testing-library/jest-native": "^4.0.11",
-    "@testing-library/react-native": "^11.0.0",
+    "@testing-library/jest-native": "^5.4.1",
+    "@testing-library/react-native": "11.5.0",
     "@types/google.maps": "^3.45.6",
     "@types/jest": "^28.1.8",
     "@types/lodash": "^4.14.178",
@@ -134,7 +134,6 @@
     "@types/uuid": "^8.3.1",
     "babel-plugin-module-resolver": "^4.1.0",
     "eas-cli": "^3.5.0",
-    "react-test-renderer": "17",
     "typescript": "^4.6.3"
   },
   "private": true,
