--- a/frontend/package.json
+++ b/frontend/package.json
@@ -111,7 +111,7 @@
     "react-native-wheel-picker-expo": "^0.4.2",
     "react-router-dom": "^5.2.0",
     "react-string-replace": "^1.1.0",
-    "realm": "^11.4.0",
+    "realm": "11.3.1",
     "reflect-metadata": "^0.1.13",
     "sentry-expo": "~6.0.0",
     "socket.io-client": "^4.4.0",
