--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,10 @@
     "update:prod": "_UPDATE_ENVIRONMENT=prod eas update --branch prod",
     "update:staging:ci": "EAS_NO_VCS=1 _UPDATE_ENVIRONMENT=staging eas update --branch $_ENVIRONMENT --non-interactive --message $COMMIT_SHA",
     "update:prod:ci": "EAS_NO_VCS=1 _UPDATE_ENVIRONMENT=prod eas update --branch $_ENVIRONMENT --non-interactive --message $_RELEASE_ID",
-    "doctor": "_DEV_ENVIRONMENT=staging expo doctor",
+    "doctor": "_DEV_ENVIRONMENT=staging expo-cli doctor",
     "test": "jest",
-    "postinstall": "node ./eas_build/preInstall.mjs"
+    "postinstall": "node ./eas_build/preInstall.mjs",
+    "fix-deps": "expo install --fix"
   },
   "jest": {
     "preset": "jest-expo",
@@ -52,39 +53,39 @@
   },
   "dependencies": {
     "@config-plugins/react-native-branch": "^4.0.0",
-    "@expo/config-plugins": "^5.0.2",
-    "@expo/prebuild-config": "^5.0.5",
+    "@expo/config-plugins": "~6.0.0",
+    "@expo/prebuild-config": "~6.0.0",
     "@googlemaps/google-maps-services-js": "3.1.16",
-    "@react-native-async-storage/async-storage": "~1.17.3",
-    "@react-native-community/netinfo": "9.3.5",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/netinfo": "9.3.7",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
-    "@sentry/react-native": "4.9.0",
+    "@sentry/react-native": "4.13.0",
     "assert": "^2.0.0",
     "axios": "^0.21.1",
     "buffer": "^6.0.3",
     "dotenv": "^16.0.1",
     "events": "^3.3.0",
-    "expo": "^47.0.0",
-    "expo-application": "~5.0.1",
-    "expo-constants": "~14.0.2",
-    "expo-dev-client": "~2.0.1",
-    "expo-device": "~5.0.0",
-    "expo-linear-gradient": "~12.0.1",
-    "expo-linking": "~3.3.0",
-    "expo-location": "~15.0.1",
-    "expo-modules-autolinking": "~1.0.0",
-    "expo-notifications": "~0.17.0",
-    "expo-screen-orientation": "~5.0.1",
-    "expo-secure-store": "~12.0.0",
-    "expo-splash-screen": "~0.17.5",
-    "expo-status-bar": "~1.4.2",
-    "expo-task-manager": "~11.0.1",
-    "expo-updates": "~0.15.6",
+    "expo": "^48.0.0",
+    "expo-application": "~5.1.1",
+    "expo-constants": "~14.2.1",
+    "expo-dev-client": "~2.1.5",
+    "expo-device": "~5.2.1",
+    "expo-linear-gradient": "~12.1.1",
+    "expo-linking": "~4.0.1",
+    "expo-location": "~15.1.1",
+    "expo-modules-autolinking": "~1.1.0",
+    "expo-notifications": "~0.18.1",
+    "expo-screen-orientation": "~5.1.1",
+    "expo-secure-store": "~12.1.1",
+    "expo-splash-screen": "~0.18.1",
+    "expo-status-bar": "~1.4.4",
+    "expo-task-manager": "~11.1.1",
+    "expo-updates": "~0.16.3",
     "inversify": "^5.1.1",
     "inversify-react": "^1.0.0",
-    "jest": "^26.6.3",
-    "jest-expo": "^47.0.1",
+    "jest": "^29.2.1",
+    "jest-expo": "^48.0.0",
     "lodash": "^4.17.21",
     "mobx": "^6.3.2",
     "mobx-persist-store": "^1.0.3",
@@ -92,18 +93,18 @@
     "module-alias": "^2.2.2",
     "moment": "^2.29.1",
     "parse-full-name": "^1.2.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-native": "0.70.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.3",
     "react-native-branch": "^5.4.0",
     "react-native-calendar-picker": "^7.1.2",
-    "react-native-gesture-handler": "~2.8.0",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-get-random-values": "~1.8.0",
     "react-native-maps": "1.3.2",
     "react-native-paper": "^4.9.2",
-    "react-native-reanimated": "~2.12.0",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
     "react-native-scroll-into-view": "^2.0.2",
     "react-native-svg": "13.4.0",
     "react-native-vector-icons": "^8.1.0",
@@ -112,7 +113,7 @@
     "react-router-dom": "^5.2.0",
     "react-string-replace": "^1.1.0",
     "reflect-metadata": "^0.1.13",
-    "sentry-expo": "~6.0.0",
+    "sentry-expo": "~6.1.0",
     "socket.io-client": "^4.4.0",
     "socket.io-mock": "^1.3.2",
     "stream-browserify": "^3.0.0",
@@ -129,11 +130,9 @@
     "@types/jest": "^28.1.8",
     "@types/lodash": "^4.14.178",
     "@types/react": "~18.0.24",
-    "@types/react-native": "~0.70.6",
     "@types/react-router-dom": "^5.1.8",
     "@types/uuid": "^8.3.1",
     "babel-plugin-module-resolver": "^4.1.0",
-    "eas-cli": "^3.5.0",
     "typescript": "^4.6.3"
   },
   "private": true,
