--- a/frontend/package.json
+++ b/frontend/package.json
@@ -60,6 +60,8 @@
     "@react-native-community/netinfo": "9.3.7",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
+    "@rschedule/core": "^1.5.0",
+    "@rschedule/standard-date-adapter": "^1.5.0",
     "@sentry/react-native": "4.13.0",
     "assert": "^2.0.0",
     "axios": "^0.21.1",
