--- a/backend/package.json
+++ b/backend/package.json
@@ -7,11 +7,9 @@
     "start": "yarn run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log",
-
     "dev": "yarn run build && PATCH_LOCAL_ENV=dev node lib/backend/src/index.js",
     "staging": "yarn run build && PATCH_LOCAL_ENV=staging node lib/backend/src/index.js",
     "prod": "yarn run build && PATCH_LOCAL_ENV=prod node lib/backend/src/index.js",
-
     "migration:create": "mongo-migrate create",
     "migration:status": "node lib/backend/src/migrations/index.js status",
     "migration:up": "node lib/backend/src/migrations/index.js up",
@@ -24,7 +22,8 @@
     "migration:status:prod": "_ENVIRONMENT=prod node lib/backend/src/migrations/index.js status",
     "migration:up:prod": "_ENVIRONMENT=prod node lib/backend/src/migrations/index.js up",
     "migration:down:prod": "_ENVIRONMENT=prod node lib/backend/src/migrations/index.js down",
-    "migration:down:latest:prod": "_ENVIRONMENT=prod node lib/backend/src/migrations/index.js down -l"
+    "migration:down:latest:prod": "_ENVIRONMENT=prod node lib/backend/src/migrations/index.js down -l",
+    "oclif": "oclif generate test_new_cli"
   },
   "engines": {
     "node": "12"
@@ -33,19 +32,24 @@
   "dependencies": {
     "@google-cloud/pubsub": "^2.18.4",
     "@mapbox/timespace": "^2.0.4",
+    "@oclif/command": "^1.8.22",
+    "@oclif/plugin-autocomplete": "^2.1.8",
+    "@oclif/plugin-commands": "^2.2.13",
+    "@oclif/plugin-help": "^5.2.9",
+    "@oclif/plugin-not-found": "^2.3.23",
     "@socket.io/redis-adapter": "^7.1.0",
-    "@tsed/agenda": "^6.62.3",
-    "@tsed/ajv": "^6.59.9",
-    "@tsed/common": "^6.59.9",
-    "@tsed/core": "^6.59.9",
-    "@tsed/di": "^6.59.9",
-    "@tsed/exceptions": "^6.59.9",
-    "@tsed/json-mapper": "^6.59.9",
-    "@tsed/mongoose": "^6.59.9",
-    "@tsed/passport": "^6.59.9",
-    "@tsed/platform-express": "^6.59.9",
-    "@tsed/schema": "^6.59.9",
-    "@tsed/socketio": "^6.59.9",
+    "@tsed/agenda": "^6.133.1",
+    "@tsed/ajv": "^6.133.1",
+    "@tsed/common": "^6.133.1",
+    "@tsed/core": "^6.133.1",
+    "@tsed/di": "^6.133.1",
+    "@tsed/exceptions": "^6.133.1",
+    "@tsed/json-mapper": "^6.133.1",
+    "@tsed/mongoose": "^6.133.1",
+    "@tsed/passport": "^6.133.1",
+    "@tsed/platform-express": "^6.133.1",
+    "@tsed/schema": "^6.133.1",
+    "@tsed/socketio": "^6.133.1",
     "@types/express": "^4.17.13",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.3.3",
@@ -68,7 +72,8 @@
     "method-override": "^3.0.0",
     "module-alias": "^2.2.2",
     "mongo-migrate-ts": "^1.1.1",
-    "mongoose": "^5.13.12",
+    "mongoose": "6.2.6",
+    "oclif": "^3.7.3",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -90,6 +95,17 @@
     "typescript": "^4.0.2"
   },
   "private": true,
+  "bin": "./bin/run",
+  "oclif": {
+    "commands": "./lib/backend/src/cli/commands",
+    "bin": "backend",
+    "plugins": [
+      "@oclif/plugin-help",
+      "@oclif/plugin-not-found",
+      "@oclif/plugin-autocomplete",
+      "@oclif/plugin-commands"
+    ]
+  },
   "_moduleAliases": {
     "common": "./lib/common",
     "infra/src": "./infra/lib/src"
