--- a/backend/package.json
+++ b/backend/package.json
@@ -60,6 +60,7 @@
     "compression": "^1.7.4",
     "connect-mongo": "^4.5.0",
     "cookie-parser": "^1.4.5",
+    "csv-stringify": "^6.4.0",
     "dotenv": "^10.0.0",
     "expo-server-sdk": "^3.6.0",
     "express": "^4.17.1",
