--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "build:dev:android": "eas build --profile dev --platform android",
     "update:staging": "_UPDATE_ENVIRONMENT=staging eas update --branch staging",
     "update:prod": "_UPDATE_ENVIRONMENT=prod eas update --branch prod",
+    "update:preprod": "_UPDATE_ENVIRONMENT=preprod eas update --branch preprod",
     "update:staging:ci": "EAS_NO_VCS=1 _UPDATE_ENVIRONMENT=staging eas update --branch $_ENVIRONMENT --non-interactive --message $COMMIT_SHA",
     "update:prod:ci": "EAS_NO_VCS=1 _UPDATE_ENVIRONMENT=prod eas update --branch $_ENVIRONMENT --non-interactive --message $_RELEASE_ID",
     "update:preprod:ci": "EAS_NO_VCS=1 _UPDATE_ENVIRONMENT=preprod eas update --branch $_ENVIRONMENT --non-interactive --message $_RELEASE_ID",
