--- a/changelog.yaml
+++ b/changelog.yaml
@@ -40,3 +40,11 @@
   timestamp: '2023-09-19T19:02:33.494Z'
   updates: []
   nativeChanges: true
+- requiresUpdate: false
+  nativeIOSVersion: 1.0.3(1)
+  nativeAndroidVersion: 1.0.3(14)
+  commit: efa74c8
+  timestamp: '2023-09-19T21:59:52.029Z'
+  updates:
+    - updating infra scripts
+  nativeChanges: false
